# Projeto_DataPipeline

./: .gitignore  04.objects.ipynb  04.pipeline_gather_data.ipynb  05.consumer_gather_data.ipynb  05.pipeline_clean_data.ipynb  06.consumer_clean_data.ipynb  06.insertion.ipynb  07.insertion.ipynb  07.visualization.ipynb  08.visualization.ipynb  README.md  main.py  pyproject.toml
api/: api.py
assets/: Flux.drawio  Projeto_Extracao_de_Dados_I.ipynb  projeto.pptx
data/: cleaned_data.parquet  raw_data.parquet
databricks/: 01.setup_kafka_zookeeper.ipynb  02.setup_kafka_server.ipynb  03.setup_kafka_topic.ipynb  03.setup_kafka_topics.ipynb  04.pipeline.ipynb  04.pipeline_gather_data.ipynb  05.insertion.ipynb  05.pipeline_clean_data.ipynb  06.insertion.ipynb  07.visualization.ipynb
env/: criteria.py
pipeline/: pipeline.py
tests/: teste.ipynb  tests.ipynb
